--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
+    "@types/react-router-dom": "^5.3.3",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "jspdf": "^2.5.2",
