--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "type": "module",
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
-    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jest": "^29.0.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.8.4",
     "puppeteer": "^23.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "nodemon": "^3.0.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
@@ -33,8 +39,9 @@
     "vite": "^5.4.2"
   },
   "scripts": {
+    "start": "node server.js",
     "dev": "vite",
-    "build": "vite build",
+    "test": "jest",
     "lint": "eslint .",
     "preview": "vite preview"
   }
