--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vite": "^5.4.2"
   },
   "scripts": {
+    "build": "vite build",
     "start": "node server.js",
     "dev": "vite",
     "test": "jest",
