--- a/.env
+++ b/.env
@@ -1,10 +1,1 @@
-MONGODB_URI=mongodb+srv://mohamedabukar412:IgA3vUwamvfD5Y9Z@cluster1.0c3ka.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-PORT=5000
-MONGODB_URI=mongodb+srv://mohamedabukar412:IgA3vUwamvfD5Y9Z@cluster1.ixsza.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-PORT=5000
-MONGODB_URI=mongodb+srv://mohamedabukar412:IgA3vUwamvfD5Y9Z@cluster1.0c3ka.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-PORT=5000
-MONGODB_URI=mongodb+srv://mohamedabukar412:IgA3vUwamvfD5Y9Z@cluster1.ixsza.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-PORT=5000
-
-IgA3vUwamvfD5Y9Z
+VITE_API_URL=http://localhost:5000/api
