--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.8.4",
+    "mongoose": "^8.9.0",
     "puppeteer": "^23.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -34,7 +36,8 @@
     "nodemon": "^3.0.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   },
@@ -45,5 +48,18 @@
     "test": "jest",
     "lint": "eslint .",
     "preview": "vite preview"
-  }
+  },
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moha254/Shilaabo-Tour-and-Car-Hire.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/moha254/Shilaabo-Tour-and-Car-Hire/issues"
+  },
+  "homepage": "https://github.com/moha254/Shilaabo-Tour-and-Car-Hire#readme",
+  "description": ""
 }
